# magic-spec

./: .env.example  .gitattributes  .gitignore  .magicrc.json  AGENTS.md  CHANGELOG.md  GEMINI.md  LICENSE  README.md  package.json  proposal-two-layer.md  pyproject.toml
.agent/workflows/: magic.onboard.md  magic.plan.md  magic.retrospective.md  magic.rule.md  magic.run.md  magic.simulate.md  magic.spec.md  magic.specification.md  magic.task.md
.agent/workflows/magic/: plan.md  rule.md  specification.md
.design/: CHANGELOG.md  CHANGELOG_DRAFT.md  CONTEXT.md  INDEX.md  PLAN.md  RETROSPECTIVE.md  RULES.md  TASKS.md
.design/archives/tasks/: phase-1.md  phase-2.md  phase-3.md
.design/specifications/: agent-environments.md  architecture.md  changelog.md  cli-installer.md  distribution-npm.md  distribution-pypi.md  installer-features.md  readme-strategy.md  secrets-management.md  workflow-enhancements.md
.design/tasks/: TASKS.md  phase-1.md  phase-2.md  phase-3.md
.magic/: .checksums  analyze.md  init.md  onboard.md  plan.md  retrospective.md  rule.md  run.md  simulate.md  spec.md  specification.md  task.md
.magic/scripts/: check-prerequisites.ps1  check-prerequisites.sh  executor.js  generate-checksums.js  generate-context.ps1  generate-context.sh  init.ps1  init.sh
.magic/templates/: plan.md  retrospective.md  specification.md  tasks.md
.magic/tests/: suite.md
adapters/cursor/: specification.mdc
adapters/kilocode/: magic.plan.md
core/.agent/workflows/magic/: task.md
core/.magic/: README.md  rule.md  specification.md  task.md
core/.magic/scripts/: init.ps1
docs/: README.md  README.node.ru.md  README.python.ru.md  README.ru.md  analyze.md  checksums.md  contributing.md  contributing.ru.md  init.md  node.ru.md  onboard.md  python.ru.md  retrospective.md  rule.md  run.md  simulate.md  spec.md  task.md
installers/: README.md  adapters.json  config.json
installers/node/: README.md  build.js  index.js  package.json  publish.js
installers/node/src/: magic.js
installers/python/: .gitignore  README.md  pyproject.toml  sync.py
installers/python/.agent/workflows/: magic.onboard.md  magic.simulate.md  magic.spec.md
installers/python/.magic/: onboard.md  retrospective.md  run.md  simulate.md  task.md
installers/python/.magic/scripts/: check-prerequisites.ps1  check-prerequisites.sh  generate-context.ps1  init.ps1  init.sh
installers/python/magic_spec/: __init__.py  __main__.py
installers/python/src/: __main__.py
installers/scripts/: README.md  publish.py
installers/tests/: test_adapter_flags.py  test_integration.py  test_publish.py
scripts/: README.md  publish.py  run_tests.py
tests/: test_integration.py  test_publish.py
