[project]
name = "magic-spec"
version = "1.2.3"
description = "Magic Specification-Driven Development (SDD) Workflow"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/teratron/magic-spec"
Repository = "https://github.com/teratron/magic-spec"

[project.scripts]
magic-spec = "magic_spec.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["installers/python/magic_spec"]

[tool.hatch.build.targets.sdist]
include = ["/installers/python/magic_spec", "/README.md", "/LICENSE"]
