[project]
name = "magic-spec"
version = "1.1.0"
description = "Magic Specification-Driven Development (SDD) Workflow"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/teratron/magic-spec"
Repository = "https://github.com/teratron/magic-spec"

[project.scripts]
magic-spec = "magic_spec.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magic_spec"]

[tool.hatch.build.targets.sdist]
include = [
    "/magic_spec",
    "/.magic",
    "/.agent",
    "/README.md",
    "/LICENSE",
    "/installers/adapters.json",
]

[tool.hatch.build.targets.wheel.shared-data]
".magic" = ".magic"
".agent" = ".agent"
"installers/adapters.json" = "adapters.json"

[tool.hatch.envs.default.scripts]
sync = "python -c \"import shutil, pathlib; root=pathlib.Path.cwd().parent.parent; [shutil.copytree(root/d, pathlib.Path.cwd()/d, dirs_exist_ok=True) for d in ['.magic','.agent']]; [shutil.copy2(root/f, pathlib.Path.cwd()/(f.split('/')[-1] if '/' in f else f)) for f in ['README.md','LICENSE','installers/adapters.json'] if (root/f).exists()]; print('✅ synced from root')\""
build = "uv build"
clean = "python -c \"import shutil, pathlib; [shutil.rmtree(pathlib.Path.cwd()/d, ignore_errors=True) for d in ['.magic','.agent']]; [pathlib.Path.cwd().joinpath(f).unlink(missing_ok=True) for f in ['README.md','LICENSE','adapters.json']]; print('🧹 cleaned temporary build files')\""
publish = "uv publish"
