[project]
name = "magic-spec"
version = "1.1.0"
description = "Magic Specification-Driven Development (SDD) Workflow"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/teratron/magic-spec"
Repository = "https://github.com/teratron/magic-spec"

[project.scripts]
magic-spec = "magic_spec.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magic_spec"]

[tool.hatch.build.targets.sdist]
include = ["/magic_spec"]
force-include = { "../../.magic" = ".magic", "../../.agent" = ".agent", "../../README.md" = "README.md", "../../LICENSE" = "LICENSE", "../adapters.json" = "adapters.json" }

[tool.hatch.build.targets.wheel.shared-data]
"../../.magic" = ".magic"
"../../.agent" = ".agent"
"../adapters.json" = "adapters.json"

[tool.hatch.envs.default.scripts]
build = "uv build"
clean = "python -c \"import shutil, pathlib; [shutil.rmtree(p, ignore_errors=True) for p in ['.magic','.agent']]; [pathlib.Path(f).unlink(missing_ok=True) for f in ['README.md','LICENSE','adapters.json']]; print('🧹 cleaned temporary build files')\""
publish = "uv publish"
