[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magic-spec"
version = "1.2.3"
description = "Magic Specification-Driven Development (SDD) Workflow"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com"}
]
keywords = ["sdd", "magic-spec", "agent", "cursor", "windsurf"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
magic-spec = "magic_spec.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["magic_spec"]

[tool.hatch.build.targets.wheel.shared-data]
".magic" = ".magic"
".agent" = ".agent"
"adapters" = "adapters"

[tool.hatch.build.targets.sdist]
include = [
    "/magic_spec",
    "/.magic",
    "/.agent",
    "/adapters",
    "/README.md",
    "/LICENSE"
]
